fixed white space caused by margin

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,7 +63,7 @@
 /* BookList Styles */
 .list {
   display: grid;
-  margin: 20px 0 50px 0;
+  padding: 20px 0 50px 0;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 2em;
